# gtk-code-folding-vala

./: 0001-fix-tree-sitter-vapi.patch  README.md  fetch-tree-sitter  meson.build  org.gnome.GtkCodeFoldingVala.json  screencast.webm
data/: index.html
src/: code-folding-source-view.vala  main.vala  meson.build
src/model/: ast-item.vala  ast-model.vala
src/view/: code-folding-source-gutter-renderer.vala  code-folding-window.vala
vapi/: libtreesitter.vapi
